# QA_tutorial

./: .gitignore  README.md
SlackBot_for_web/: .env.example  README.md  pyproject.toml
SlackBot_for_web/docs/: dashboard_ui.md  hitl_trigger_matrix.md  map_agent_scope_risk_review.md  (+2 more)
agent_a/: README.md
ai_field_mapping/: README.md
ai_field_mapping/agent_a/: .gitignore  pyproject.toml
ai_field_mapping/agent_a/agent_a/: __init__.py  cli.py  llm_queue_selector.py  segmenter.py
ai_field_mapping/agent_a/agent_a/llm/: client.py  prompts.py
ai_field_mapping/agent_a/agent_a/rules/: normalize_ko_numbers.py
ai_field_mapping/agent_a/docs/: candidate_pool_rules.md
ai_field_mapping/agent_a/tests/: test_csv_to_memo_txt.py  test_segmenter.py
ai_field_mapping/agent_a/tests/fixtures/: sample_expected_hard.json  sample_memo.txt
qa_review_ui/: README.md  app.py
schema_generator/: README.md  build_effective_schema_from_deal.py  build_fn_review_input.py  generate_effective_schema.py
unreal_engine_gitignore/: read.txt
web_qa/: README.md
web_qa/SlackBot_for_web/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
web_qa/SlackBot_for_web/docs/: artifact_mode_migration_plan.md  current_engine_version.md  engine_first_architecture.md  fallback_state_machine.md  slack_thread_vector_memory_plan.md
web_qa/SlackBot_for_web/docs/schemas/: coverage_plan.schema.json  qa_report.schema.json  test_case_results.schema.json
web_qa/SlackBot_for_web/review_ui/: README.md  index.html  package-lock.json  vite.config.ts
web_qa/SlackBot_for_web/review_ui/src/: App.tsx  api.ts  styles.css  types.ts
web_qa/SlackBot_for_web/src/slackbot_for_web/: __init__.py  config.py  dashboard.py  engine_cli.py  main.py  memory_cards.py  memory_index.py  slack_app.py  slack_messaging.py  webqa_runner.py
무신사/: SW TESTv1.0_SAMPLE(2023)_b.xlsx  무신사_추천탭.csv  무신사_추천탭.xlsx
(+61 files in other folders)
