[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slackbot-for-web"
version = "0.2.0"
description = "Engine-first web QA runtime with Slack, CLI, and dashboard transports"
keywords = ["web-qa", "langgraph", "mcp", "vibium", "dashboard", "slack"]
requires-python = ">=3.10"
dependencies = [
  "slack-bolt==1.21.2",
  "python-dotenv~=0.21.0",
  "google-genai>=1.38.0",
  "mcp>=1.14.1",
  "aiohttp>=3.9.5",
  "openai>=1.50.0",
  "pydantic>=2.8.0",
  "langgraph>=0.2.40",
  "sentence-transformers>=3.4.1",
]

[project.scripts]
webqa-slack = "slackbot_for_web.main:main"
webqa-engine = "slackbot_for_web.engine_cli:main"
webqa-dashboard = "slackbot_for_web.dashboard:main"
webqa-memory-extract = "slackbot_for_web.memory_cards:main"
webqa-memory-index = "slackbot_for_web.memory_index:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

